--- a/RecipeView/packages.config
+++ b/RecipeView/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
+  <package id="PhoneThemeManager" version="2.0" targetFramework="wp81" />
+  <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp81" />
 </packages>
