--- a/RecipeView/RecipeView.csproj
+++ b/RecipeView/RecipeView.csproj
@@ -175,8 +175,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\WideLogo.png" />
-    <Content Include="Images\Barcode.png" />
+    <Content Include="Images\barcodeMain.png" />
+    <Content Include="Images\fridgeMain.png" />
     <Content Include="Images\knife16.png" />
+    <Content Include="Images\magnifyingGlassMain.png" />
+    <Content Include="Images\matchMain.png" />
     <Content Include="Images\StirFryPic.jpg" />
     <Content Include="README_FIRST.txt" />
     <Content Include="Toolkit.Content\ApplicationBar.Add.png" />
