--- a/RecipeView/RecipeView.csproj
+++ b/RecipeView/RecipeView.csproj
@@ -104,11 +104,11 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MatchedRecipeList.xaml.cs">
+      <DependentUpon>MatchedRecipeList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model\Ingredient.cs" />
     <Compile Include="Model\Instruction.cs" />
-    <Compile Include="Page1.xaml.cs">
-      <DependentUpon>Page1.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -129,7 +129,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Page1.xaml">
+    <Page Include="MatchedRecipeList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
